; ModuleID = '/home/carl/AnghaBench/openpilot/selfdrive/visiond/extr_clutil.c_cl_index_program_from_file.c'
source_filename = "/home/carl/AnghaBench/openpilot/selfdrive/visiond/extr_clutil.c_cl_index_program_from_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cl_index_program_from_file(i32 %0, i32 %1, i8* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %11, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load i8*, i8** %8, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = call i32 @cl_cached_program_from_file(i32 %13, i32 %14, i8* %15, i8* %16, i32* %11)
  store i32 %17, i32* %12, align 4
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %11, align 4
  %20 = call i32 @add_index(i32 %18, i32 %19)
  %21 = load i32, i32* %12, align 4
  ret i32 %21
}

declare dso_local i32 @cl_cached_program_from_file(i32, i32, i8*, i8*, i32*) #1

declare dso_local i32 @add_index(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
